News UAT/force-app/main/default/objects/DataStage__c/DataStage__c.object-meta.xml
<CustomObject>
    <description>Support for delta jobs in the DataStage connector pack</description>
    <label>DataStage</label>
    <nameField>
        <displayFormat>DSJ-{0000}</displayFormat>
        <label>DataStage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DataStages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>