News UAT/force-app/main/default/objects/DataStage__c/fields/lastextracttime__c.field-meta.xml
<CustomField>
    <fullName>lastextracttime__c</fullName>
    <description>This field stores the date and time when a user, identified by a unique extractId, last ran a particular delta extraction job. This field has the type of datetime.</description>
    <label>Last Extract Time</label>
    <type>DateTime</type>
</CustomField>