News UAT/force-app/main/default/objects/DataStage__c/fields/object__c.field-meta.xml
<CustomField>
    <fullName>object__c</fullName>
    <description>This field stores the name of the Salesforce object for the delta extraction. It has the type of Text Field with 40 characters</description>
    <label>Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>